Connection string name change

--- a/PoC.Calendar.WASM/Server/appsettings.json
+++ b/PoC.Calendar.WASM/Server/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TravelAgentConnection": "Server=localhost,1433;Database=PoCCalendarDB;User ID=sa;Password=pa55w0rd!"
+    "CalendarDBConnection": "Server=localhost,1433;Database=PoCCalendarDB;User ID=sa;Password=pa55w0rd!"
   }
 }
