--- a/PoC.Calendar.WASM/Server/PoC.Calendar.WASM.Server.csproj
+++ b/PoC.Calendar.WASM/Server/PoC.Calendar.WASM.Server.csproj
@@ -20,5 +20,9 @@
     <ProjectReference Include="..\Shared\PoC.Calendar.WASM.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
