--- a/PoC.Calendar.WASM/Server/PoC.Calendar.WASM.Server.csproj
+++ b/PoC.Calendar.WASM/Server/PoC.Calendar.WASM.Server.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
@@ -18,10 +20,6 @@
     <ProjectReference Include="..\..\PoC.Calendar.Data\PoC.Calendar.Data.csproj" />
     <ProjectReference Include="..\Client\PoC.Calendar.WASM.Client.csproj" />
     <ProjectReference Include="..\Shared\PoC.Calendar.WASM.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 
