--- a/PoC.Calendar.WASM/Server/appsettings.json
+++ b/PoC.Calendar.WASM/Server/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CalendarDBConnection": "Server=localhost,1433;Database=PoCCalendarDB;User ID=sa;Password=pa55w0rd!"
+  },
+  "ServiceSettings": {
+    "ServiceName": "Calendar"
+  },
+  "RabbitMQSettings": {
+    "Host": "localhost"
   }
 }
