--- a/Poc.Calendar.Api/PoC.Calendar.Api.csproj
+++ b/Poc.Calendar.Api/PoC.Calendar.Api.csproj
@@ -7,21 +7,17 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PoC.Calendar.Common\PoC.Calendar.Common.csproj" />
-    <ProjectReference Include="..\..\PoC.Calendar.Data\PoC.Calendar.Data.csproj" />
-    <ProjectReference Include="..\Client\PoC.Calendar.WASM.Client.csproj" />
-    <ProjectReference Include="..\Shared\PoC.Calendar.WASM.Shared.csproj" />
+    <ProjectReference Include="..\PoC.Calendar.Data\PoC.Calendar.Data.csproj" />
   </ItemGroup>
-
 
 </Project>
