--- a/Poc.Calendar.Api/appsettings.json
+++ b/Poc.Calendar.Api/appsettings.json
@@ -8,15 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CalendarDBConnection": "Server=localhost,1433;Database=PoCCalendarDB;User ID=sa;Password=pa55w0rd!"
+    "EventsDBConnection": "Server=localhost,1433;Database=PoCEventsDB;User ID=sa;Password=pa55w0rd!"
   },
+
   "ServiceSettings": {
-    "ServiceName": "Calendar"
+    "ServiceName": "Events"
   },
   "RabbitMQSettings": {
     "Host": "localhost"
-  },
-  "CalendarSettings": {
-    "CalendarId": 1
   }
 }
