--- a/PoC.Calendar.WASM/Server/appsettings.json
+++ b/PoC.Calendar.WASM/Server/appsettings.json
@@ -17,6 +17,7 @@
     "Host": "localhost"
   },
   "CalendarSettings": {
-    "CalendarId": 1
+    "CalendarId": 1,
+    "CalendarApiBaseUrl": "https://localhost:44353/api/events"
   }
 }
