--- a/PoC.Calendar.WASM/Server/appsettings.json
+++ b/PoC.Calendar.WASM/Server/appsettings.json
@@ -11,7 +11,7 @@
     "CalendarDBConnection": "Server=localhost,1433;Database=PoCCalendarDB;User ID=sa;Password=pa55w0rd!"
   },
   "ServiceSettings": {
-    "ServiceName": "Calendar"
+    "ServiceName": "EventsConsumer"
   },
   "RabbitMQSettings": {
     "Host": "localhost"
