--- a/Poc.Calendar.Api/PoC.Calendar.Api.csproj
+++ b/Poc.Calendar.Api/PoC.Calendar.Api.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PoC.Calendar.Common\PoC.Calendar.Common.csproj" />
     <ProjectReference Include="..\PoC.Calendar.Data\PoC.Calendar.Data.csproj" />
     <ProjectReference Include="..\PoC.Calendar.WASM\Shared\PoC.Calendar.WASM.Shared.csproj" />
   </ItemGroup>
