--- a/Poc.Calendar.Api/appsettings.json
+++ b/Poc.Calendar.Api/appsettings.json
@@ -12,7 +12,7 @@
   },
 
   "ServiceSettings": {
-    "ServiceName": "Events"
+    "ServiceName": "EventPublisher"
   },
   "RabbitMQSettings": {
     "Host": "localhost"
